analyse/analyse/clusters.log
   ------------------------------------------------------------------
  | Welcome to ROOT 6.32.06                        https://root.cern |
  | (c) 1995-2024, The ROOT Team; conception: R. Brun, F. Rademakers |
  | Built for linuxx8664gcc on Dec 17 2024, 00:34:05                 |
  | From tags/v6-32-06-alice1@v6-32-06-alice1                        |
  | With c++ (GCC) 13.2.0                                            |
  | Try '.help'/'.?', '.demo', '.license', '.credits', '.quit'/'.q'  |
   ------------------------------------------------------------------


(int) 0
Processing analyze_trending.cpp++(1)...
Info in <TUnixSystem::ACLiC>: creating shared library /afs/cern.ch/work/s/sgaretti/rejectList/PbPb/analyse/./analyze_trending_cpp.so
In file included from input_line_9:6:
././analyze_trending.cpp:142:34: error: expected function body after function declarator
void analyze_trending(int flag=1))
                                 ^
Error in <ACLiC>: Executing '/cvmfs/alice.cern.ch/el9-x86_64/Packages/ROOT/v6-32-06-alice1-12/bin/rootcling -v0 "--lib-list-prefix=/afs/cern.ch/work/s/sgaretti/rejectList/PbPb/analyse/analyze_trending_cpp_ACLiC_map" -f "/afs/cern.ch/work/s/sgaretti/rejectList/PbPb/analyse/analyze_trending_cpp_ACLiC_dict.cxx" -I$ROOTSYS/include -I"/cvmfs/alice.cern.ch/el9-x86_64/Packages/AEGIS/v1.5.4-4/include" -I"/cvmfs/alice.cern.ch/el9-x86_64/Packages/QualityControl/async-v1-02-02-1/include/QualityControl" -I"/cvmfs/alice.cern.ch/el9-x86_64/Packages/QualityControl/async-v1-02-02-1/include" -I"/cvmfs/alice.cern.ch/el9-x86_64/Packages/O2Physics/async-v1-02-02-1/include" -I"/cvmfs/alice.cern.ch/el9-x86_64/Packages/MCStepLogger/v0.6.1-30/include" -I"/cvmfs/alice.cern.ch/el9-x86_64/Packages/KFParticle/v1.1-5-52/include" -I"/cvmfs/alice.cern.ch/el9-x86_64/Packages/O2/async-v1-02-02-1/include" -I"/cvmfs/alice.cern.ch/el9-x86_64/Packages/O2/async-v1-02-02-1/include/GPU" -I"/cvmfs/alice.cern.ch/el9-x86_64/Packages/RapidJSON/v1.1.0-alice2-17/include" -I"/cvmfs/alice.cern.ch/el9-x86_64/Packages/ONNXRuntime/v1.18.1-11/include/onnxruntime" -I"/cvmfs/alice.cern.ch/el9-x86_64/Packages/fastjet/v3.4.1_1.052-alice2-33/include" -I"/cvmfs/alice.cern.ch/el9-x86_64/Packages/JAliEn-ROOT/0.7.14-27/include" -I"/cvmfs/alice.cern.ch/el9-x86_64/Packages/ms_gsl/4.0.0-15/include" -I"/cvmfs/alice.cern.ch/el9-x86_64/Packages/Common-O2/v1.6.3-8/include" -I"/cvmfs/alice.cern.ch/el9-x86_64/Packages/Monitoring/v3.18.1-43/include" -I"/cvmfs/alice.cern.ch/el9-x86_64/Packages/libInfoLogger/v2.7.3-8/include" -I"/cvmfs/alice.cern.ch/el9-x86_64/Packages/HepMC3/3.3.0-30/include" -I"/cvmfs/alice.cern.ch/el9-x86_64/Packages/FairRoot/v18.4.9-alice3-64/include" -I"/cvmfs/alice.cern.ch/el9-x86_64/Packages/FairMQ/v1.8.4-40/include/fairmq" -I"/cvmfs/alice.cern.ch/el9-x86_64/Packages/FairMQ/v1.8.4-40/include" -I"/cvmfs/alice.cern.ch/el9-x86_64/Packages/GEANT3/v4-4-14/include/TGeant3" -I"/cvmfs/alice.cern.ch/el9-x86_64/Packages/GEANT4_VMC/v6-6-p1-41/include/g4root" -I"/cvmfs/alice.cern.ch/el9-x86_64/Packages/GEANT4_VMC/v6-6-p1-41/include/geant4vmc" -I"/cvmfs/alice.cern.ch/el9-x86_64/Packages/VMC/v2-0-63/include/vmc" -I"/cvmfs/alice.cern.ch/el9-x86_64/Packages/TBB/v2021.5.0-18/include" -I"/cvmfs/alice.cern.ch/el9-x86_64/Packages/Vc/1.4.1-17/include" -I"/cvmfs/alice.cern.ch/el9-x86_64/Packages/FairLogger/v1.11.1-20/include" -I"/cvmfs/alice.cern.ch/el9-x86_64/Packages/fmt/10.1.1-17/include" -I"/cvmfs/alice.cern.ch/el9-x86_64/Packages/pythia/v8311-24/include" -I"/cvmfs/alice.cern.ch/el9-x86_64/Packages/OpenSSL/v1.1.1m-11/include" -I"/cvmfs/alice.cern.ch/el9-x86_64/Packages/boost/v1.83.0-alice2-27/include" -I"/cvmfs/alice.cern.ch/el9-x86_64/Packages/ROOT/v6-32-06-alice1-12/etc/" -I"/cvmfs/alice.cern.ch/el9-x86_64/Packages/ROOT/v6-32-06-alice1-12/etc//cling" -I"/cvmfs/alice.cern.ch/el9-x86_64/Packages/ROOT/v6-32-06-alice1-12/etc//cling/plugins/include" -I"/cvmfs/alice.cern.ch/el9-x86_64/Packages/ROOT/v6-32-06-alice1-12/include/" -I"/cvmfs/alice.cern.ch/el9-x86_64/Packages/ROOT/v6-32-06-alice1-12/include" -D__ACLIC__  "/afs/cern.ch/work/s/sgaretti/rejectList/PbPb/analyse/./analyze_trending.cpp" "/afs/cern.ch/work/s/sgaretti/rejectList/PbPb/analyse/analyze_trending_cpp_ACLiC_linkdef.h"' failed!
